--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            background-color: blue;
+        
+        }
+        h2{
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
     <h1>пока мир!</h1>
+    <h2>выйди отсюда разбейник</h2>
+    <a href="task_1.html">Первое задание</a>
+    <a href="task_2.html">второе задание</a>
+    <a href="my_page.html">Моя страничка</a>
     
 </body>
 </html>
