--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
             color:white;
             background-color: black;
         }
+        h3 {
+            color: red;
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     
     </style>
 </head>
@@ -48,3 +55,8 @@
     <p1>Minecraft (от англ. mine — «шахта», «добывать» и англ. craft — «ремесло») — компьютерная игра разработанная шведским программистом Маркусом Перссоном. В Minecraft у игрока есть свой трёхмерный мир, полностью состоящий из кубов — его можно свободно перестраивать, создавая из этих кубов сложные сооружения. Эта особенность делает игру схожей с конструктором LEGO. Мы ведь не запрещаем играть ребенку в реальный конструктор? Наоборот, радуемся если у него есть интерес к такой игре и покупаем дорогие наборы в подарок на каждый праздник. </p>
     <p2>Minecraft не ставит перед игроком каких-либо конкретных целей, но предлагает ему свободу действий: например, он может исследовать мир, добывать полезные ископаемые, сражаться с противниками и т.д. Игра включает в себя дополнительные режимы, например, «выживание», где игроку нужно самому добывать ресурсы, и «творчество», где у игрока эти ресурсы есть в неограниченном количестве. Механика «редстоуна» (англ. Redstone) позволяет создавать в игре сложные логические схемы — тем самым игра может служить виртуальным конструктором для программистов и инженеров.</p2>
     <p3>  Из описания Майнкрафта можно сделать вывод о том, что игра развивает творческие навыки и пространственное мышление, умение создавать схемы и мыслить логически.</p3>
+    <h3>Among Us</h3>
+    <p4>Among Us (с англ. — «Среди нас») — многопользовательская компьютерная игра на социальную дедукцию, разработанная американской компанией InnerSloth[3] и выпущенная 15 июня 2018. Игра выполнена в космической тематике. В ней игроки случайным образом разделяются на две команды: члены экипажа и предатели.
+
+        В 2018 году игра не получила широкую огласку, но в 2020 году благодаря Twitch и YouTube она добилась популярности. Из-за повышенного интереса к ней был анонсирован сиквел — Among Us 2. Впоследствии выход сиквела был отменён 23 сентября 2020 года, разработчики приняли решение развивать оригинальную игру</p4>
+    
