--- a/about.html
+++ b/about.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    p1{
+        color: blue;
+        background-color: yellow;
+    }
+</style>
 <body>
-    <p1> Я же говорила что тут ничего нет.</p1>
+    <p1>Roblox — многопользовательская онлайн-платформа, которая позволяет пользователям создавать свои собственные и играть в созданные другими пользователями игры. Платформа содержит созданные пользователем игры и виртуальные миры, охватывающие широкий спектр жанров, от традиционных гонок и ролевых игр до симуляторов и полос препятствий. По состоянию на август 2020 года у Roblox более 164 миллионов активных пользователей в месяц, причем в него играют более половины всех детей в возрасте до 16 лет в Соединенных Штатах.</p1>
     
 </body>
 </html>
