--- a/home.html
+++ b/home.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    p1{
+        color: rgb(5, 90, 12);
+        background-color: rgba(255, 188, 4, 0.904);
+    }
+</style>
 <body>
-    <h1>Hellow, it's me</h1>
-    <p1>Тут ничего нету</p1>
+  
+    <p1>Майнкрафт (Minecraft) - это компьютерная игра с бесконечными мирами, созданными из блоков, где нужно строить и выживать. Главный герой игры - Стив, именно им управляет игрок. Он попадает в мир, где ничего нет. Задача Стива построить себе жилище и собрать необходимые для жизни ресурсы, либо отвоевать их у других. Сделать это будет не просто, так как на пути часто встречаются зомби, пауки, волки, ведьмы и другие отрицательные персонажи. Не существует какого-то единственно правильного способа играть в Minecraft. Кто-то любит сражаться и пускается в завоевание чужих миров, кто-то просто строит из блоков все, что вздумается. Опытные игроки воспроизводят в Майнкрафте самые красивые архитектурные произведения мира, а иной раз и целые города. Удивительно, но школа Виктора Ридберга в Стокгольме (Швеция) ввела обязательные уроки по Minecraft для ребят от 13 лет, обосновав это тем, что игра развивает навыки городского планирования и ориентирования. Учитель школы Моника Экман считает, что суть Майнкрафта не отличается от уроков ИЗО или технологии.</p1>
     
 </body>
 </html>
