--- a/question.html
+++ b/question.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    p1{
+        color: rgb(0, 0, 0);
+        background-color: red;
+    }
+</style>
 <body>
-    <p1>Тут тоже ничего нету и дальше ничего не будет.</p1>
+    <p1>Among Us(с англ. — «Среди нас») — многопользовательская компьютерная игра на социальную дедукцию, разработанная американской компанией InnerSloth[3] и выпущенная 15 июня 2018. Игра выполнена в космической тематике. В ней игроки случайным образом разделяются на две команды: члены экипажа и предатели.
+
+        В 2018 году игра не получила широкую огласку, но в 2020 году благодаря Twitch и YouTube она добилась популярности. Из-за повышенного интереса к ней был анонсирован сиквел — Among Us 2. Впоследствии выход сиквела был отменён 23 сентября 2020 года, разработчики приняли решение развивать оригинальную игру.</p1>
     
 </body>
 </html>
