--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             
             
         }
-        .first,.second,.third{
+        .first,.second,.third,.xtnsht{
             height: 100vh;
             justify-content: center;
             display: flex;
@@ -46,6 +46,9 @@
         }
         .third{
             background-color: rgb(0, 183, 255);
+        }
+        .xtnsht{
+            background-color: blueviolet;
         }
         .contener{
             border:5px solid rgb(207, 192, 206);
@@ -78,6 +81,7 @@
             <a href="#home">1 игра</a>
             <a href="#question">2 игра</a>
             <a href="#about">3 игра</a>
+            <a href="#volga">4 игра</a>
         </div>
 
     </div>
@@ -95,6 +99,11 @@
     <div class="third" id="about">
         <div class="contener">
            <a href="about.html">Roblox </a> 
+        </div>
+    </div>
+    <div class="xtnsht" id="volga"> 
+        <div class="contener">
+            <a href="volga.html">Counter-Strike.</a>
         </div>
     </div>
 
