--- a/cotener_returned.html
+++ b/cotener_returned.html
@@ -24,6 +24,9 @@
                 <li class="list-group-item">item 3</li>
                 <li class="list-group-item">item 4</li>
             </ul>
+            <button class="btn btn-danger" id="button">Click</button> 
+            <div id="output"></div>
+            <div id="box" style="width: 200px; height:200px; background-color: lightgreen;"></div>
         </div>
     </div>
  <script src="dom.js"></script>
